--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
     "dev": "vite --port=3000",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
+    "@testing-library/react": "^14.1.2",
     "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/nodemon": "^1.19.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-spotify-web-playback": "^0.14.2"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^6.4.0",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -31,11 +36,13 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "spotify-web-api-node": "^5.0.2",
     "tailwindcss": "^3.4.1",
-    "ts-node": "^10.6.0",
-    "typescript": "^5.2.2",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
     "vite": "^5.0.8"
   }
 }
