--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "useDefineForClassFields": true,
     "lib": ["ES2016", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
+    "types": ["node", "jest"],
 
     /* Bundler mode */
     "moduleResolution": "Node",
