--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,14 +1,14 @@
 {
   "ts-node": {
     "compilerOptions": {
-      "module": "ESNext",
+      "module": "NodeNext",
     }
   },
   "compilerOptions": {
     "composite": true,
     "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "allowSyntheticDefaultImports": true
   },
   "include": ["vite.config.ts"]
