--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/nodemon": "^1.19.6",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "react": "^17.0.2",
@@ -31,6 +32,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "lyrics-finder": "^21.7.0",
     "nodemon": "^3.0.3",
     "spotify-web-api-node": "^5.0.2",
     "tailwindcss": "^3.4.1",
