--- a/src/server/package.json
+++ b/src/server/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.5",
     "esm": "^3.2.25",
     "express": "^4.18.2",
+    "lyrics-finder": "^21.7.0",
     "nodemon": "^3.0.3",
     "spotify-web-api-node": "^5.0.2",
     "ts-node": "^10.9.2",
